tests/NormalTests/paczka1/fuzzy1/30016726.err
Error in line 1: tl8 S259 29,9
Error in line 4: KSU0EvchF S259 3h,1
Error in line 5: MOnqxHY4lL9 S259 -2,8
Error in line 6: KSU0Evc4F S611 40,1
Error in line 2: MOnqxHY4lL9 S259 41,6
Error in line 13: S177 S785 51,6
Error in line 11: 0wd0YCD S259 8,5
Error in line 32: MOnqxHY4lL9 S785 72,9
